# music-bot

./: .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
.github/workflows/: docker-image.yml
music_bot/: __main__.py
